--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
 
 label {
     font-family: 'Play', sans-serif;
+    font-size:4rem;
 }
 
 .page {
@@ -119,6 +120,9 @@ h1 {
         font-size: 3rem;
         text-align: center;
     }
+    label {
+    font-size:3rem;
+}
 }
 
 @media screen and (min-width: 1200px) {
@@ -128,4 +132,7 @@ h1 {
         font-size: 4rem;
         text-align: center;
     }
+        label {
+        font-size:2rem;
+}
 }
